--- a/DAW/DOR/activity1/index.html
+++ b/DAW/DOR/activity1/index.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Activity 1: CSS styling</title>
-    <!-- Your styles here -->
     <style>
+
+      #first_block{
+        width: 100%;  
+        border: 1px solid black;
+        margin-bottom: 10px; 
+      }
+
+      #second_block{
+        width: 50%;
+        background: red;
+        text-decoration: bold;
+        margin-bottom: 1em;
+      }
+
+      .third_block{
+        width: 50%;
+        color: blue;
+        padding: 1rem;
+      }
+                
     </style>
   </head>
   <body>
