--- a/DAW/DEW/activity3/index.html
+++ b/DAW/DEW/activity3/index.html
@@ -15,6 +15,41 @@
         <li>Add a table with as many rows and conlumns both Rows and Columns fields indicate</li>
         <li>Each table cell must contain a text like: "Row: X, Col: Y"</li>
       </ol>
-    <img src="./default.png" alt="just an image">
+
+      <br>
+      <br>
+      <br>
+      ROWS: 
+      <input type="number" id="rows">
+      <br>
+      <br> 
+      COLUMNS:
+      <input type="number" id="columns">
+      <br>
+      <br>
+      <input type="submit" name="button" value="Generate" onclick="GenerateTable()">
+
+      <div id = "divTable"></div>
+
+      <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+      <script>
+        function GenerateTable(){
+          var rows = document.getElementById("rows").value;
+          var columns = document.getElementById("columns").value;
+          $("#table").remove();
+          $("#divTable").append("<table id='table' style=\"border: 1px, solid\">");
+          for(var i = 0; i<rows; i++){
+            var tr = $("#table").append("<tr>");
+            for(var j = 0; j<columns; j++){
+              tr.append("<td>ROW"+i +" COL"+j+"</td>");
+            }   
+          }
+        }
+
+
+      </script>
   </body>
 </html>
