--- a/DAW/DEW/activity3/index.html
+++ b/DAW/DEW/activity3/index.html
@@ -12,9 +12,10 @@
     <p>Add a form with two fields ("Rows" and "Columns") and a button ("Generate Table"). When the button is clicked it have to:</p>
       <ol>
         <li>remove a table#generated if exists </li>
-        <li>Add a table with as many rows and conlumns both Rows and Columns fields indicate</li>
+        <li>Add a table with as many rows and columns both Rows and Columns fields indicate</li>
         <li>Each table cell must contain a text like: "Row: X, Col: Y"</li>
       </ol>
+
 
       <br>
       <br>
