--- a/DAW/DOR/activity1/index.html
+++ b/DAW/DOR/activity1/index.html
@@ -8,6 +8,7 @@
     <title>Activity 1: CSS styling</title>
     <style>
 
+
       #first_block{
         width: 100%;  
         border: 1px solid black;
@@ -27,6 +28,11 @@
         padding: 1rem;
       }
                 
+
+      .first_block.tricky_content_makes_conflict_or_not{
+        display:none;
+      }
+
     </style>
   </head>
   <body>
