--- a/DAW/DOR/activity4/index.html
+++ b/DAW/DOR/activity4/index.html
@@ -28,6 +28,19 @@
     </ul>
 
     <!-- Your code here -->
+<style >
+  
+  #col{
+    
+  }
+
+  
+</style>
+    <div class="container">
+      <div class="row">
+        <div class="col"></div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
